terraform/src/k8s/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-api-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: rag-api
  ports:
    - port: 80
      targetPort: 8000
